--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -107,211 +107,211 @@
         state: restarted
 
 
-- name: Configuration complète d'OpenVPN
-  hosts: vpn
-  become: true
+# - name: Configuration complète d'OpenVPN
+#   hosts: vpn
+#   become: true
 
-  vars:
-    openvpn_dir: /etc/openvpn
-    easyrsa_dir: /etc/openvpn/easy-rsa
-    export_dir: /etc/openvpn/export
-    server_name: "server"
-    vpn_subnet: "10.8.0.0"
-    vpn_netmask: "255.255.255.0"
+#   vars:
+#     openvpn_dir: /etc/openvpn
+#     easyrsa_dir: /etc/openvpn/easy-rsa
+#     export_dir: /etc/openvpn/export
+#     server_name: "server"
+#     vpn_subnet: "10.8.0.0"
+#     vpn_netmask: "255.255.255.0"
 
-  tasks:
-    # Étape 1 : Installer OpenVPN et Easy-RSA
-    - name: Installer OpenVPN et Easy-RSA
-      apt:
-        name:
-          - openvpn
-          - easy-rsa
-        state: present
-        update_cache: yes
+#   tasks:
+#     # Étape 1 : Installer OpenVPN et Easy-RSA
+#     - name: Installer OpenVPN et Easy-RSA
+#       apt:
+#         name:
+#           - openvpn
+#           - easy-rsa
+#         state: present
+#         update_cache: yes
 
-    # Étape 2 : Préparer les répertoires nécessaires
-    - name: Créer les répertoires nécessaires pour OpenVPN
-      file:
-        path: "{{ item }}"
-        state: directory
-        mode: '0755'
-      loop:
-        - "{{ openvpn_dir }}"
-        - "{{ easyrsa_dir }}"
-        - "{{ export_dir }}"  # Répertoire pour stocker le fichier client.ovpn
+#     # Étape 2 : Préparer les répertoires nécessaires
+#     - name: Créer les répertoires nécessaires pour OpenVPN
+#       file:
+#         path: "{{ item }}"
+#         state: directory
+#         mode: '0755'
+#       loop:
+#         - "{{ openvpn_dir }}"
+#         - "{{ easyrsa_dir }}"
+#         - "{{ export_dir }}"  # Répertoire pour stocker le fichier client.ovpn
 
-    # Étape 3 : Copier Easy-RSA
-    - name: Copier les fichiers Easy-RSA dans le répertoire
-      copy:
-        src: /usr/share/easy-rsa/
-        dest: "{{ easyrsa_dir }}"
-        remote_src: yes
+#     # Étape 3 : Copier Easy-RSA
+#     - name: Copier les fichiers Easy-RSA dans le répertoire
+#       copy:
+#         src: /usr/share/easy-rsa/
+#         dest: "{{ easyrsa_dir }}"
+#         remote_src: yes
 
-    # Étape 4 : Configurer les variables Easy-RSA
-    - name: Configurer les variables Easy-RSA
-      lineinfile:
-        path: "{{ easyrsa_dir }}/vars"
-        create: yes
-        line: "{{ item }}"
-      loop:
-        - 'set_var EASYRSA_REQ_COUNTRY    "FR"'
-        - 'set_var EASYRSA_REQ_PROVINCE   "Ile-de-France"'
-        - 'set_var EASYRSA_REQ_CITY       "Paris"'
-        - 'set_var EASYRSA_REQ_ORG        "MyVPN"'
-        - 'set_var EASYRSA_REQ_EMAIL      "admin@myvpn.local"'
-        - 'set_var EASYRSA_REQ_OU         "IT Department"'
+#     # Étape 4 : Configurer les variables Easy-RSA
+#     - name: Configurer les variables Easy-RSA
+#       lineinfile:
+#         path: "{{ easyrsa_dir }}/vars"
+#         create: yes
+#         line: "{{ item }}"
+#       loop:
+#         - 'set_var EASYRSA_REQ_COUNTRY    "FR"'
+#         - 'set_var EASYRSA_REQ_PROVINCE   "Ile-de-France"'
+#         - 'set_var EASYRSA_REQ_CITY       "Paris"'
+#         - 'set_var EASYRSA_REQ_ORG        "MyVPN"'
+#         - 'set_var EASYRSA_REQ_EMAIL      "admin@myvpn.local"'
+#         - 'set_var EASYRSA_REQ_OU         "IT Department"'
 
-    # Étape 5 : Générer les certificats nécessaires
-    - name: Initialiser le PKI
-      command: ./easyrsa init-pki
-      args:
-        chdir: "{{ easyrsa_dir }}"
+#     # Étape 5 : Générer les certificats nécessaires
+#     - name: Initialiser le PKI
+#       command: ./easyrsa init-pki
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
 
-    - name: Construire le certificat de l'autorité de certification (CA)
-      command: ./easyrsa build-ca nopass
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
+#     - name: Construire le certificat de l'autorité de certification (CA)
+#       command: ./easyrsa build-ca nopass
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
+#       environment:
+#         EASYRSA_BATCH: "1"
 
-    - name: Générer le certificat et la clé privée du serveur
-      command: ./easyrsa gen-req {{ server_name }} nopass
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
+#     - name: Générer le certificat et la clé privée du serveur
+#       command: ./easyrsa gen-req {{ server_name }} nopass
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
+#       environment:
+#         EASYRSA_BATCH: "1"
 
-    - name: Signer le certificat du serveur
-      command: ./easyrsa sign-req server {{ server_name }}
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
+#     - name: Signer le certificat du serveur
+#       command: ./easyrsa sign-req server {{ server_name }}
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
+#       environment:
+#         EASYRSA_BATCH: "1"
 
-    - name: Générer le certificat Diffie-Hellman
-      command: ./easyrsa gen-dh
-      args:
-        chdir: "{{ easyrsa_dir }}"
+#     - name: Générer le certificat Diffie-Hellman
+#       command: ./easyrsa gen-dh
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
 
-    - name: Générer une clé TLS Auth
-      command: openvpn --genkey --secret ta.key
-      args:
-        chdir: "{{ easyrsa_dir }}/pki"
+#     - name: Générer une clé TLS Auth
+#       command: openvpn --genkey --secret ta.key
+#       args:
+#         chdir: "{{ easyrsa_dir }}/pki"
 
-    # Étape 6 : Copier les certificats et clés vers OpenVPN
-    - name: Copier les certificats et clés vers /etc/openvpn
-      copy:
-        src: "{{ easyrsa_dir }}/pki/{{ item.src }}"
-        dest: "{{ openvpn_dir }}/{{ item.dest }}"
-        remote_src: yes
-      loop:
-        - { src: "ca.crt", dest: "ca.crt" }
-        - { src: "issued/{{ server_name }}.crt", dest: "server.crt" }
-        - { src: "private/{{ server_name }}.key", dest: "server.key" }
-        - { src: "dh.pem", dest: "dh.pem" }
-        - { src: "ta.key", dest: "ta.key" }
+#     # Étape 6 : Copier les certificats et clés vers OpenVPN
+#     - name: Copier les certificats et clés vers /etc/openvpn
+#       copy:
+#         src: "{{ easyrsa_dir }}/pki/{{ item.src }}"
+#         dest: "{{ openvpn_dir }}/{{ item.dest }}"
+#         remote_src: yes
+#       loop:
+#         - { src: "ca.crt", dest: "ca.crt" }
+#         - { src: "issued/{{ server_name }}.crt", dest: "server.crt" }
+#         - { src: "private/{{ server_name }}.key", dest: "server.key" }
+#         - { src: "dh.pem", dest: "dh.pem" }
+#         - { src: "ta.key", dest: "ta.key" }
 
-    # Étape 7 : Configurer OpenVPN
-    - name: Configurer OpenVPN (server.conf)
-      copy:
-        dest: "{{ openvpn_dir }}/server.conf"
-        content: |
-          port 16385
-          proto udp
-          dev tun
-          ca ca.crt
-          cert server.crt
-          key server.key
-          dh dh.pem
-          auth SHA256
-          tls-auth ta.key 0
-          server {{ vpn_subnet }} {{ vpn_netmask }}
-          ifconfig-pool-persist ipp.txt
-          keepalive 10 120
-          cipher AES-256-CBC
-          persist-key
-          persist-tun
-          status openvpn-status.log
-          log-append /var/log/openvpn.log
-          verb 3
-          explicit-exit-notify 1
+#     # Étape 7 : Configurer OpenVPN
+#     - name: Configurer OpenVPN (server.conf)
+#       copy:
+#         dest: "{{ openvpn_dir }}/server.conf"
+#         content: |
+#           port 16385
+#           proto udp
+#           dev tun
+#           ca ca.crt
+#           cert server.crt
+#           key server.key
+#           dh dh.pem
+#           auth SHA256
+#           tls-auth ta.key 0
+#           server {{ vpn_subnet }} {{ vpn_netmask }}
+#           ifconfig-pool-persist ipp.txt
+#           keepalive 10 120
+#           cipher AES-256-CBC
+#           persist-key
+#           persist-tun
+#           status openvpn-status.log
+#           log-append /var/log/openvpn.log
+#           verb 3
+#           explicit-exit-notify 1
 
-    # Étape 8 : Activer et démarrer OpenVPN
-    - name: Activer et démarrer le service OpenVPN
-      service:
-        use : service
-        name: openvpn
-        state: started
-        enabled: yes
+#     # Étape 8 : Activer et démarrer OpenVPN
+#     - name: Activer et démarrer le service OpenVPN
+#       service:
+#         use : service
+#         name: openvpn
+#         state: started
+#         enabled: yes
 
-    # Étape 9 : Générer les certificats pour le client
-    - name: Générer une clé et un certificat pour le client
-      command: ./easyrsa gen-req client nopass
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
+#     # Étape 9 : Générer les certificats pour le client
+#     - name: Générer une clé et un certificat pour le client
+#       command: ./easyrsa gen-req client nopass
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
+#       environment:
+#         EASYRSA_BATCH: "1"
 
-    - name: Signer le certificat du client
-      command: ./easyrsa sign-req client client
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
+#     - name: Signer le certificat du client
+#       command: ./easyrsa sign-req client client
+#       args:
+#         chdir: "{{ easyrsa_dir }}"
+#       environment:
+#         EASYRSA_BATCH: "1"
     
-    - name: Appliquer des permissions 777 sur tous les fichiers générés
-      file:
-        path: "{{ item }}"
-        mode: '777'
-      loop:
-        - /etc/openvpn
+#     - name: Appliquer des permissions 777 sur tous les fichiers générés
+#       file:
+#         path: "{{ item }}"
+#         mode: '777'
+#       loop:
+#         - /etc/openvpn
 
 
-    # Étape 10 : Générer le fichier client.ovpn
-    # - name: Créer le certificat et le fichier client.ovpn via Easy-RSA
-    #   command: ./easyrsa build-client-full client nopass
-    #   args:
-    #     chdir: /etc/openvpn/easy-rsa
+#     # Étape 10 : Générer le fichier client.ovpn
+#     # - name: Créer le certificat et le fichier client.ovpn via Easy-RSA
+#     #   command: ./easyrsa build-client-full client nopass
+#     #   args:
+#     #     chdir: /etc/openvpn/easy-rsa
 
-    - name: Générer automatiquement le fichier client.ovpn
-      shell: |
-        echo "client
-        dev tun
-        proto udp
-        remote 91.175.31.138 16387  # Utilise l'IP publique de ta boxe et le port redirigé
-        resolv-retry infinite
-        nobind
-        persist-key
-        persist-tun
-        remote-cert-tls server
-        auth SHA256
-        cipher AES-256-CBC
-        verb 3
-        key-direction 1
-        <ca>" > /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/ca.crt >> /etc/openvpn/client.ovpn && \
-        echo "</ca>
-        <cert>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/issued/client.crt >> /etc/openvpn/client.ovpn && \
-        echo "</cert>
-        <key>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/private/client.key >> /etc/openvpn/client.ovpn && \
-        echo "</key>
-        <tls-auth>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/ta.key >> /etc/openvpn/client.ovpn && \
-        echo "</tls-auth>" >> /etc/openvpn/client.ovpn
-      args:
-        creates: /etc/openvpn/client.ovpn
+#     - name: Générer automatiquement le fichier client.ovpn
+#       shell: |
+#         echo "client
+#         dev tun
+#         proto udp
+#         remote 91.175.31.138 16387  # Utilise l'IP publique de ta boxe et le port redirigé
+#         resolv-retry infinite
+#         nobind
+#         persist-key
+#         persist-tun
+#         remote-cert-tls server
+#         auth SHA256
+#         cipher AES-256-CBC
+#         verb 3
+#         key-direction 1
+#         <ca>" > /etc/openvpn/client.ovpn && \
+#         cat /etc/openvpn/easy-rsa/pki/ca.crt >> /etc/openvpn/client.ovpn && \
+#         echo "</ca>
+#         <cert>" >> /etc/openvpn/client.ovpn && \
+#         cat /etc/openvpn/easy-rsa/pki/issued/client.crt >> /etc/openvpn/client.ovpn && \
+#         echo "</cert>
+#         <key>" >> /etc/openvpn/client.ovpn && \
+#         cat /etc/openvpn/easy-rsa/pki/private/client.key >> /etc/openvpn/client.ovpn && \
+#         echo "</key>
+#         <tls-auth>" >> /etc/openvpn/client.ovpn && \
+#         cat /etc/openvpn/easy-rsa/pki/ta.key >> /etc/openvpn/client.ovpn && \
+#         echo "</tls-auth>" >> /etc/openvpn/client.ovpn
+#       args:
+#         creates: /etc/openvpn/client.ovpn
 
-    - name: S'assurer que le fichier client.ovpn est généré
-      stat:
-        path: /etc/openvpn/client.ovpn
-      register: client_ovpn_file
+#     - name: S'assurer que le fichier client.ovpn est généré
+#       stat:
+#         path: /etc/openvpn/client.ovpn
+#       register: client_ovpn_file
 
-    - name: Afficher un message si le fichier client.ovpn est généré
-      debug:
-        msg: "Le fichier client.ovpn a été généré avec succès et est disponible ici : /etc/openvpn/client.ovpn"
-      when: client_ovpn_file.stat.exists
+#     - name: Afficher un message si le fichier client.ovpn est généré
+#       debug:
+#         msg: "Le fichier client.ovpn a été généré avec succès et est disponible ici : /etc/openvpn/client.ovpn"
+#       when: client_ovpn_file.stat.exists
 
 
 
