--- a/ad_windows/kerberos/krb5.conf
+++ b/ad_windows/kerberos/krb5.conf
@@ -1,5 +1,5 @@
 [libdefaults]
-    default_realm = MAME.NET
+    default_realm = MAME.net
     dns_lookup_realm = false
     dns_lookup_kdc = true
     ticket_lifetime = 24h
@@ -7,11 +7,11 @@
     forwardable = true
 
 [realms]
-    MAME.NET = {
+    MAME.net = {
         kdc = 10.8.0.3
         admin_server = 10.8.0.3
     }
 
 [domain_realm]
-    .mame.net = MAME.NET
-    mame.net = MAME.NET
+    .MAME.net = MAME.net
+    MAME.net = MAME.net
