--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -19,7 +19,7 @@
   become: true  # Exécute les tâches en tant que root
   vars:
     domaine_ad: "MAME.net"         # Nom du domaine Active Directory
-    realm_ad: "MAME.NET"           # Nom du REALM (toujours en majuscules)
+    realm_ad: "MAME.net"           # Nom du REALM (toujours en majuscules)
     serveur_ad_ip: "10.8.0.3"      # Adresse IP du contrôleur de domaine AD
     utilisateur_domaine: "Administrator"  # Utilisateur avec droits sur le domaine
     mot_de_passe_domaine: "Roa42300"  # Mot de passe pour l'utilisateur
