--- a/ad_windows/samba/smb.conf
+++ b/ad_windows/samba/smb.conf
@@ -1,7 +1,7 @@
 [global]
              workgroup = MYWORKGROUP
              security = ADS
-             realm = MON_DOMAINE.LOCAL
+             realm = MAME.net
              encrypt passwords = yes
              log file = /var/log/samba/%m.log
              log level = 1
