--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -224,23 +224,32 @@
           port 16385
           proto udp
           dev tun
-          ca ca.crt
-          cert server.crt
-          key server.key
-          dh dh.pem
-          auth SHA256
-          tls-auth ta.key 0
-          server {{ vpn_subnet }} {{ vpn_netmask }}
-          ifconfig-pool-persist ipp.txt
-          keepalive 10 120
-          cipher AES-256-CBC
+          user nobody
+          group nogroup
           persist-key
           persist-tun
-          status openvpn-status.log
-          log-append /var/log/openvpn.log
+          keepalive 10 120
+          topology subnet
+          server 10.8.0.0 255.255.255.0
+          ifconfig-pool-persist ipp.txt
+          push "dhcp-option DNS 1.0.0.1"
+          push "dhcp-option DNS 1.1.1.1"
+          push "redirect-gateway def1 bypass-dhcp"
+          dh none
+          ecdh-curve prime256v1
+          tls-crypt tls-crypt.key
+          crl-verify crl.pem
+          ca ca.crt
+          auth SHA256
+          cipher AES-128-GCM
+          ncp-ciphers AES-128-GCM
+          tls-server
+          tls-version-min 1.2
+          tls-cipher TLS-ECDHE-ECDSA-WITH-AES-128-GCM-SHA256
+          client-config-dir /etc/openvpn/ccd
+          status /var/log/openvpn/status.log
           verb 3
-          explicit-exit-notify 1
-
+          
     # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
       service:
