--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -224,31 +224,54 @@
           port 16385
           proto udp
           dev tun
+
+          # Permissions
           user nobody
           group nogroup
           persist-key
           persist-tun
+
+          # Keepalive et topologie
           keepalive 10 120
           topology subnet
+
+          # Adresse IP et configuration du serveur
           server 10.8.0.0 255.255.255.0
           ifconfig-pool-persist ipp.txt
+
+          # DNS push
           push "dhcp-option DNS 1.0.0.1"
           push "dhcp-option DNS 1.1.1.1"
+
+          # Redirection du trafic des clients via le VPN
           push "redirect-gateway def1 bypass-dhcp"
+
+          # Certificats et clés
           dh none
           ecdh-curve prime256v1
           tls-crypt tls-crypt.key
           crl-verify crl.pem
           ca ca.crt
+          cert server_nlKKJ60cGAUO3ovJ.crt
+          key server_nlKKJ60cGAUO3ovJ.key
+
+          # Chiffrement et authentification
           auth SHA256
           cipher AES-128-GCM
           ncp-ciphers AES-128-GCM
           tls-server
           tls-version-min 1.2
           tls-cipher TLS-ECDHE-ECDSA-WITH-AES-128-GCM-SHA256
+
+          # Répertoires et fichiers de configuration
           client-config-dir /etc/openvpn/ccd
           status /var/log/openvpn/status.log
+
+          # Verbosité des logs
           verb 3
+
+          
+
           
     # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
