--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -246,14 +246,14 @@
           # Redirection du trafic des clients via le VPN
           push "redirect-gateway def1 bypass-dhcp"
 
-          # Certificats et clés
+          # Certificats et clés (dynamique)
           dh none
           ecdh-curve prime256v1
           tls-crypt tls-crypt.key
           crl-verify crl.pem
           ca ca.crt
-          cert server_nlKKJ60cGAUO3ovJ.crt
-          key server_nlKKJ60cGAUO3ovJ.key
+          cert {{ server_cert }}
+          key {{ server_key }}
 
           # Chiffrement et authentification
           auth SHA256
@@ -270,9 +270,32 @@
           # Verbosité des logs
           verb 3
 
-          
 
-          
+    - name: Identifier le certificat et la clé du serveur
+      find:
+        paths: /etc/openvpn/easy-rsa/pki/issued
+        patterns: "*.crt"
+      register: cert_files
+
+    - name: Identifier la clé privée du serveur
+      find:
+        paths: /etc/openvpn/easy-rsa/pki/private
+        patterns: "*.key"
+      register: key_files
+
+    - name: Vérifier qu'un seul certificat et clé sont trouvés
+      fail:
+        msg: "Plusieurs certificats ou clés trouvés. Veuillez vérifier."
+      when: cert_files.matched > 1 or key_files.matched > 1
+
+    - name: Générer le fichier de configuration OpenVPN (server.conf)
+      template:
+        src: server.conf.j2
+        dest: /etc/openvpn/server.conf
+      vars:
+        server_cert: "{{ cert_files.files[0].path | basename }}"
+        server_key: "{{ key_files.files[0].path | basename }}"
+
     # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
       service:
