--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -217,41 +217,6 @@
         - { src: "ta.key", dest: "ta.key" }
 
     # Étape 7 : Configurer OpenVPN
-    - name: Nettoyer les anciens certificats et clés
-      file:
-        path: "{{ item }}"
-        state: absent
-      with_items:
-        - /etc/openvpn/easy-rsa/pki/reqs/client.req
-        - /etc/openvpn/easy-rsa/pki/issued/client.crt
-        - /etc/openvpn/easy-rsa/pki/private/client.key
-
-    # - name: Identifier le certificat et la clé du serveur
-    #   find:
-    #     paths: /etc/openvpn/easy-rsa/pki/issued
-    #     patterns: "*.crt"
-    #   register: cert_files
-
-    # - name: Identifier la clé privée du serveur
-    #   find:
-    #     paths: /etc/openvpn/easy-rsa/pki/private
-    #     patterns: "*.key"
-    #   register: key_files
-
-    # - name: Vérifier qu'un seul certificat et clé sont trouvés
-    #   fail:
-    #     msg: "Plusieurs certificats ou clés trouvés. Veuillez vérifier."
-    #   when: cert_files.matched > 1 or key_files.matched > 1
-
-    # - name: Générer le fichier de configuration OpenVPN (server.conf)
-    #   template:
-    #     src: server.conf.j2
-    #     dest: /etc/openvpn/server.conf
-    #   vars:
-    #     server_cert: "{{ cert_files.files[0].path | basename }}"
-    #     server_key: "{{ key_files.files[0].path | basename }}"
-
-
     - name: Configurer OpenVPN (server.conf)
       copy:
         dest: "{{ openvpn_dir }}/server.conf"
@@ -259,54 +224,22 @@
           port 16385
           proto udp
           dev tun
-
-          # Permissions
-          user nobody
-          group nogroup
+          ca ca.crt
+          cert server.crt
+          key server.key
+          dh dh.pem
+          auth SHA256
+          tls-auth ta.key 0
+          server {{ vpn_subnet }} {{ vpn_netmask }}
+          ifconfig-pool-persist ipp.txt
+          keepalive 10 120
+          cipher AES-256-CBC
           persist-key
           persist-tun
-
-          # Keepalive et topologie
-          keepalive 10 120
-          topology subnet
-
-          # Adresse IP et configuration du serveur
-          server 10.8.0.0 255.255.255.0
-          ifconfig-pool-persist ipp.txt
-
-          # DNS push
-          push "dhcp-option DNS 1.0.0.1"
-          push "dhcp-option DNS 1.1.1.1"
-
-          # Redirection du trafic des clients via le VPN
-          push "redirect-gateway def1 bypass-dhcp"
-
-          # Certificats et clés (dynamique)
-          dh none
-          ecdh-curve prime256v1
-          tls-crypt tls-crypt.key
-          crl-verify crl.pem
-          ca ca.crt
-          cert {{ server_cert }}
-          key {{ server_key }}
-
-          # Chiffrement et authentification
-          auth SHA256
-          cipher AES-128-GCM
-          ncp-ciphers AES-128-GCM
-          tls-server
-          tls-version-min 1.2
-          tls-cipher TLS-ECDHE-ECDSA-WITH-AES-128-GCM-SHA256
-
-          # Répertoires et fichiers de configuration
-          client-config-dir /etc/openvpn/ccd
-          status /var/log/openvpn/status.log
-
-          # Verbosité des logs
+          status openvpn-status.log
+          log-append /var/log/openvpn.log
           verb 3
-
-
-    
+          explicit-exit-notify 1
 
     # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
