--- a/ad_windows/docker-compose.yml
+++ b/ad_windows/docker-compose.yml
@@ -14,9 +14,10 @@ services:
       # - ./samba:/etc/samba
       - ./kerberos:/etc/krb5.conf
       - ./ad/resolv.conf:/etc/resolv.conf
-    networks:
-      shared_net:
-        ipv4_address: 192.168.0.3
+    network_mode: "host"
+    # networks:
+    #   shared_net:
+    #     ipv4_address: 192.168.0.3
     privileged: true
 
 
