--- a/ad_windows/docker-compose.yml
+++ b/ad_windows/docker-compose.yml
@@ -8,22 +8,16 @@ services:
     container_name: vpn
     ports:
       - "16387:16387/udp"        # Port VPN
-      - "2222:22"              # Port SSH
+      - "2222:22"                # Port SSH
     volumes:
       - ./openvpn:/etc/openvpn
       # - ./samba:/etc/samba
       - ./kerberos:/etc/krb5.conf
       - ./ad/resolv.conf:/etc/resolv.conf
-    network_mode: "host"
-    # networks:
-    #   shared_net:
-    #     ipv4_address: 192.168.0.3
-    privileged: true
-
+    networks:
+      macvlan_net:
+        ipv4_address: 192.168.0.10  # Adresse IP à donner au conteneur
 
 networks:
-  shared_net:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 192.168.0.0/24
+  macvlan_net:
+    external: true
