--- a/ad_windows/openvpn/server.conf
+++ b/ad_windows/openvpn/server.conf
@@ -9,7 +9,7 @@ tls-auth /etc/openvpn/ta.key 0
 server 10.8.0.0 255.255.255.0
 ifconfig-pool-persist /etc/openvpn/ipp.txt
 push "redirect-gateway def1 bypass-dhcp"
-push "dhcp-option DNS 10.8.0.3"  # DNS de ton réseau ou celui du domaine AD
+push "dhcp-option DNS 10.8.0.3"
 keepalive 10 120
 cipher AES-256-CBC
 user nobody
