--- a/ad_windows/docker-compose.yml
+++ b/ad_windows/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     container_name: vpn
     ports:
-      - "16387/udp:16387/udp"        # Port VPN
+      - "16387:16387/udp"        # Port VPN
       - "2222:22"              # Port SSH
     volumes:
       - ./openvpn:/etc/openvpn
