--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -10,19 +10,19 @@
       failed_when: "'Error' in testparm_output.stderr"
       changed_when: false
 
-
     - name: Reconfigurer le paquet samba-common-bin
       command: dpkg --configure -a
 
+
 - name: Joindre une machine Ubuntu au domaine Active Directory
   hosts: all
-  become: true  # Exécute les tâches en tant que root
+  become: true
   vars:
-    domaine_ad: "MAME.net"         # Nom du domaine Active Directory
-    realm_ad: "MAME.net"           # Nom du REALM (toujours en majuscules)
-    serveur_ad_ip: "10.8.0.3"      # Adresse IP du contrôleur de domaine AD
-    utilisateur_domaine: "Administrator"  # Utilisateur avec droits sur le domaine
-    mot_de_passe_domaine: "Roa42300"  # Mot de passe pour l'utilisateur
+    domaine_ad: "MAME.net"
+    realm_ad: "MAME.net"
+    serveur_ad_ip: "10.8.0.3"
+    utilisateur_domaine: "Administrator"
+    mot_de_passe_domaine: "Roa42300"
 
   tasks:
 
@@ -40,7 +40,6 @@
 
     - name: Redémarrer SSSD
       service:
-        use : service
         name: dbus
         state: started
 
@@ -49,22 +48,14 @@
         src: /home/toine-fa/SAE5.02/ad_windows/samba/smb.conf
         dest: "/etc/samba/smb.conf"
 
-
     - name: Découvrir le domaine Active Directory
       command: "realm discover {{ domaine_ad }}"
       register: realm_discover
       changed_when: false
 
-
-    # - name: SUPPRIMER le domaine Active Directory
-    #   command: "realm leave mon_domaine.local"
-    #   register: realm_discover
-    #   changed_when: false
-
-
     - name: Joindre la machine au domaine
       command: >
-        echo Roa42300 | realm join {{ domaine_ad }} -U {{ utilisateur_domaine }}
+        echo {{ mot_de_passe_domaine }} | realm join {{ domaine_ad }} -U {{ utilisateur_domaine }}
       args:
         creates: /etc/sssd/sssd.conf
 
@@ -125,7 +116,6 @@
     vpn_netmask: "255.255.255.0"
 
   tasks:
-    # Étape 1 : Installer OpenVPN et Easy-RSA
     - name: Installer OpenVPN et Easy-RSA
       apt:
         name:
@@ -134,7 +124,6 @@
         state: present
         update_cache: yes
 
-    # Étape 2 : Préparer les répertoires nécessaires
     - name: Créer les répertoires nécessaires pour OpenVPN
       file:
         path: "{{ item }}"
@@ -143,16 +132,14 @@
       loop:
         - "{{ openvpn_dir }}"
         - "{{ easyrsa_dir }}"
-        - "{{ export_dir }}"  # Répertoire pour stocker le fichier client.ovpn
+        - "{{ export_dir }}"
 
-    # Étape 3 : Copier Easy-RSA
-    - name: Copier les fichiers Easy-RSA dans le répertoire
+    - name: Copier les fichiers Easy-RSA
       copy:
         src: /usr/share/easy-rsa/
         dest: "{{ easyrsa_dir }}"
         remote_src: yes
 
-    # Étape 4 : Configurer les variables Easy-RSA
     - name: Configurer les variables Easy-RSA
       lineinfile:
         path: "{{ easyrsa_dir }}/vars"
@@ -166,44 +153,20 @@
         - 'set_var EASYRSA_REQ_EMAIL      "admin@myvpn.local"'
         - 'set_var EASYRSA_REQ_OU         "IT Department"'
 
-    # Étape 5 : Générer les certificats nécessaires
-    - name: Initialiser le PKI
-      command: ./easyrsa init-pki
-      args:
-        chdir: "{{ easyrsa_dir }}"
-
-    - name: Construire le certificat de l'autorité de certification (CA)
-      command: ./easyrsa build-ca nopass
+    - name: Initialiser le PKI et générer les certificats nécessaires
+      command: "{{ item }}"
       args:
         chdir: "{{ easyrsa_dir }}"
       environment:
         EASYRSA_BATCH: "1"
+      loop:
+        - ./easyrsa init-pki
+        - ./easyrsa build-ca nopass
+        - ./easyrsa gen-req {{ server_name }} nopass
+        - ./easyrsa sign-req server {{ server_name }}
+        - ./easyrsa gen-dh
+        - openvpn --genkey --secret ta.key
 
-    - name: Générer le certificat et la clé privée du serveur
-      command: ./easyrsa gen-req {{ server_name }} nopass
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
-
-    - name: Signer le certificat du serveur
-      command: ./easyrsa sign-req server {{ server_name }}
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
-
-    - name: Générer le certificat Diffie-Hellman
-      command: ./easyrsa gen-dh
-      args:
-        chdir: "{{ easyrsa_dir }}"
-
-    - name: Générer une clé TLS Auth
-      command: openvpn --genkey --secret ta.key
-      args:
-        chdir: "{{ easyrsa_dir }}/pki"
-
-    # Étape 6 : Copier les certificats et clés vers OpenVPN
     - name: Copier les certificats et clés vers /etc/openvpn
       copy:
         src: "{{ easyrsa_dir }}/pki/{{ item.src }}"
@@ -216,7 +179,23 @@
         - { src: "dh.pem", dest: "dh.pem" }
         - { src: "ta.key", dest: "ta.key" }
 
-    # Étape 7 : Configurer OpenVPN
+    - name: Vérifier l'existence des fichiers OpenVPN
+      stat:
+        path: "{{ openvpn_dir }}/{{ item }}"
+      register: file_check
+      loop:
+        - ca.crt
+        - server.crt
+        - server.key
+        - dh.pem
+        - ta.key
+
+    - name: Échouer si un fichier requis est manquant
+      fail:
+        msg: "Le fichier {{ item.item }} est manquant dans {{ openvpn_dir }}."
+      when: not item.stat.exists
+      loop: "{{ file_check.results }}"
+
     - name: Configurer OpenVPN (server.conf)
       copy:
         dest: "{{ openvpn_dir }}/server.conf"
@@ -242,82 +221,8 @@
           verb 3
           explicit-exit-notify 1
 
-    # Étape 8 : Activer et démarrer OpenVPN
     - name: Activer et démarrer le service OpenVPN
       service:
-        use : service
         name: openvpn
         state: started
         enabled: yes
-
-    # Étape 9 : Générer les certificats pour le client
-    - name: Générer une clé et un certificat pour le client
-      command: ./easyrsa gen-req client nopass
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
-
-    - name: Signer le certificat du client
-      command: ./easyrsa sign-req client client
-      args:
-        chdir: "{{ easyrsa_dir }}"
-      environment:
-        EASYRSA_BATCH: "1"
-    
-    - name: Appliquer des permissions 777 sur tous les fichiers générés
-      file:
-        path: "{{ item }}"
-        mode: '777'
-      loop:
-        - /etc/openvpn
-
-
-    # Étape 10 : Générer le fichier client.ovpn
-    # - name: Créer le certificat et le fichier client.ovpn via Easy-RSA
-    #   command: ./easyrsa build-client-full client nopass
-    #   args:
-    #     chdir: /etc/openvpn/easy-rsa
-
-    - name: Générer automatiquement le fichier client.ovpn
-      shell: |
-        echo "client
-        dev tun
-        proto udp
-        remote 91.175.31.138 16387  # Utilise l'IP publique de ta boxe et le port redirigé
-        resolv-retry infinite
-        nobind
-        persist-key
-        persist-tun
-        remote-cert-tls server
-        auth SHA256
-        cipher AES-256-CBC
-        verb 3
-        key-direction 1
-        <ca>" > /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/ca.crt >> /etc/openvpn/client.ovpn && \
-        echo "</ca>
-        <cert>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/issued/client.crt >> /etc/openvpn/client.ovpn && \
-        echo "</cert>
-        <key>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/private/client.key >> /etc/openvpn/client.ovpn && \
-        echo "</key>
-        <tls-auth>" >> /etc/openvpn/client.ovpn && \
-        cat /etc/openvpn/easy-rsa/pki/ta.key >> /etc/openvpn/client.ovpn && \
-        echo "</tls-auth>" >> /etc/openvpn/client.ovpn
-      args:
-        creates: /etc/openvpn/client.ovpn
-
-    - name: S'assurer que le fichier client.ovpn est généré
-      stat:
-        path: /etc/openvpn/client.ovpn
-      register: client_ovpn_file
-
-    - name: Afficher un message si le fichier client.ovpn est généré
-      debug:
-        msg: "Le fichier client.ovpn a été généré avec succès et est disponible ici : /etc/openvpn/client.ovpn"
-      when: client_ovpn_file.stat.exists
-
-
-
