--- a/ad_windows/playbook.yml
+++ b/ad_windows/playbook.yml
@@ -1,3 +1,4 @@
+---
 - name: Réécrire entièrement le fichier smb.conf pour Samba
   hosts: all
   become: true
@@ -164,7 +165,7 @@
         - ./easyrsa gen-req {{ server_name }} nopass
         - ./easyrsa sign-req server {{ server_name }}
         - ./easyrsa gen-dh
-        - openvpn --genkey --secret ta.key
+        - openvpn --genkey --secret /etc/openvpn/easy-rsa/pki/ta.key
 
     - name: Copier les certificats et clés vers /etc/openvpn
       copy:
@@ -189,21 +190,22 @@
         - dh.pem
         - ta.key
 
-    - name: Échouer si un fichier requis est manquant
-      fail:
-        msg: "Le fichier {{ item.item }} est manquant dans {{ openvpn_dir }}."
-      when: not item.stat.exists
-      loop: "{{ file_check.results }}"
-
     - name: Sécuriser les permissions des fichiers sensibles (server.key et ta.key)
       file:
-        path: "{{ openvpn_dir }}/{{ item }}"
-        mode: '0600'
+        path: "/etc/openvpn/easyrsa_dir/pki"
+        mode: '0777'
         owner: root
         group: root
       loop:
         - server.key
         - ta.key
+
+
+    - name: Échouer si un fichier requis est manquant
+      fail:
+        msg: "Le fichier {{ item.item }} est manquant dans {{ openvpn_dir }}."
+      when: not item.stat.exists
+      loop: "{{ file_check.results }}"
 
     - name: Configurer OpenVPN (server.conf)
       copy:
@@ -236,7 +238,6 @@
         name: openvpn
         state: started
         enabled: yes
-
 
     # Étape 9 : Générer les certificats pour le client
     - name: Générer une clé et un certificat pour le client
